--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,18 +9,21 @@ espressoCore = "3.5.1"
 androidGradlePlugin = "8.0.2"
 material = "1.9.0"
 rxJava = "3.1.5"
+navigation-component = "2.5.3"
 
 [libraries]
 androidx-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "ktx" }
 androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
-app-compat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat"}
+app-compat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-rx-java-3 = { group = "io.reactivex.rxjava3", name = "rxjava", version.ref = "rxJava"}
+rx-java-3 = { group = "io.reactivex.rxjava3", name = "rxjava", version.ref = "rxJava" }
+navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation-component" }
+navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation-component" }
 #Test dependencies
-junit-4 = { group = "junit", name = "junit", version.ref = "junit4"}
+junit-4 = { group = "junit", name = "junit", version.ref = "junit4" }
 #Instrumentation test dependencies
-androidtest-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxTestExt"}
-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore"}
+androidtest-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxTestExt" }
+espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 #BuildSrc dependencies
 android-tools-gradle-plugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
 gradlePlugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
@@ -28,4 +31,4 @@ gradlePlugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", ve
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin"}
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
