--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ espressoCore = "3.5.1"
 androidGradlePlugin = "8.0.2"
 material = "1.9.0"
 rxJava = "3.1.5"
+koin = "3.4.2"
 
 [libraries]
 androidx-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "ktx" }
@@ -16,11 +17,16 @@ androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-r
 app-compat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat"}
 material-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 rx-java-3 = { group = "io.reactivex.rxjava3", name = "rxjava", version.ref = "rxJava"}
+koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koin"}
+koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koin"}
 #Test dependencies
 junit-4 = { group = "junit", name = "junit", version.ref = "junit4"}
+koin-test = { group = "io.insert-koin", name = "koin-test", version.ref = "koin"}
+koin-test-junit4 = { group = "io.insert-koin", name = "koin-test-junit4", version.ref = "koin"}
 #Instrumentation test dependencies
 androidtest-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxTestExt"}
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore"}
+koin-android-test = { group = "io.insert-koin", name = "koin-android-test", version.ref = "koin"}
 #BuildSrc dependencies
 android-tools-gradle-plugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
 gradlePlugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
