Home feature configured

--- a/core/domain/build.gradle
+++ b/core/domain/build.gradle
@@ -5,3 +5,10 @@ plugins {
 android {
     namespace = "com.theblackbit.animemania.android.core.domain"
 }
+
+dependencies {
+    implementation(project(":model"))
+    implementation(project(":core:util"))
+    implementation(libs.paging.runtime)
+    implementation(libs.paging.rxjava3)
+}
