--- a/feature/home/build.gradle
+++ b/feature/home/build.gradle
@@ -5,3 +5,9 @@ plugins {
 android {
     namespace = "com.theblackbit.animemania.android.feature.home"
 }
+
+dependencies {
+    implementation(libs.paging.runtime)
+    implementation(libs.paging.rxjava3)
+    implementation(project(":feature:common"))
+}
