--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 ktx = "1.10.1"
 kotlin = "1.8.0"
-lifecycleRuntimeKtx = "2.6.1"
+lifecycleVersion = "2.6.1"
 appcompat = "1.6.1"
 junit4 = "4.13.2"
 androidxTestExt = "1.1.5"
@@ -12,10 +12,14 @@ rxJava = "3.1.5"
 koin = "3.4.2"
 paging3 = "3.1.1"
 navigation-component = "2.5.3"
+glide = "4.15.1"
+mockito = "3.9.0"
+coroutinesTest = "1.5.2"
 
 [libraries]
 androidx-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "ktx" }
-androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
+androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleVersion" }
+lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleVersion" }
 app-compat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 rx-java-3 = { group = "io.reactivex.rxjava3", name = "rxjava", version.ref = "rxJava"}
@@ -25,11 +29,14 @@ paging-runtime = {group = "androidx.paging", name = "paging-runtime", version.re
 paging-rxjava3 = {group = "androidx.paging", name = "paging-rxjava3", version.ref = "paging3"}
 navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation-component" }
 navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation-component" }
+glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 #Test dependencies
 junit-4 = { group = "junit", name = "junit", version.ref = "junit4"}
-paging-common = {group = "androidx.paging", name = "paging-common", version.ref = "paging3" }
+paging-common = { group = "androidx.paging", name = "paging-common", version.ref = "paging3" }
 koin-test = { group = "io.insert-koin", name = "koin-test", version.ref = "koin"}
 koin-test-junit4 = { group = "io.insert-koin", name = "koin-test-junit4", version.ref = "koin"}
+mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mockito" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutinesTest" }
 #Instrumentation test dependencies
 androidtest-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxTestExt" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
