--- a/.github/workflows/android_verification_pipeline.yml
+++ b/.github/workflows/android_verification_pipeline.yml
@@ -1,10 +1,8 @@
 name: PR verification
 run-name: ${{ github.actor }} Your PR is being verified 🔬
 on:
-  pull_request_target:
-    types: [opened, reopened]
+  push:
     branches:
-      - 'master'
       - 'develop'
 
 jobs:
