--- a/.github/workflows/android_code_verification_pipeline.yml
+++ b/.github/workflows/android_code_verification_pipeline.yml
@@ -1,8 +1,8 @@
-name: PR verification
+name: Android pipe line verification
 run-name: ${{ github.actor }} Your PR is being verified 🔬
 on:
-  pull_request_target:
-    types: [opened, reopened]
+  pull_request: {}
+  push:
     branches:
       - 'master'
       - 'develop'
@@ -19,19 +19,8 @@ jobs:
           java-version: '17'
       - run: fastlane lint_format
       - run: fastlane lint_verification
-  Run-Unit-Test:
-    needs: Run-Linter
-    name: Run unit test
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - run: fastlane unit_test_verification  
   Code-analysis:
-    needs: Run-Unit-Test
+    needs: Run-Linter
     name: Code analysis by code climate
     runs-on: macos-latest
     steps:
