--- a/.github/workflows/android_code_verification_pipeline.yml
+++ b/.github/workflows/android_code_verification_pipeline.yml
@@ -8,7 +8,19 @@ on:
       - 'develop'
 
 jobs:
+  Run-Linter:
+    name: Run ktlint
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - run: fastlane lint_format
+      - run: fastlane lint_verification
   Code-analysis:
+    needs: Run-Linter
     name: Code analysis by code climate
     runs-on: macos-latest
     steps:
