--- a/.github/workflows/upload_code_coverage.yml
+++ b/.github/workflows/upload_code_coverage.yml
@@ -1,27 +1,15 @@
-name: Android pipe line verification
-run-name: ${{ github.actor }} Your PR is being verified 🔬
+name: Upload code coverage to Code Climate 🌡
+run-name: ${{ github.actor }} Generating and upload your coverage report 📊
 on:
-  pull_request: {}
-  push:
+  pull_request:
+    types: [opened, reopened]
     branches:
       - 'master'
       - 'develop'
 
 jobs:
-  Run-Linter:
-    name: Run ktlint
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - run: fastlane lint_format
-      - run: fastlane lint_verification
-  Code-analysis:
-    needs: Run-Linter
-    name: Code analysis by code climate
+  Coverage-report:
+    name: Code climate Coverage report 🌡📊
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
