Edited on pull request added to workflow

--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -2,7 +2,7 @@ name: Test verification
 run-name: ${{ github.actor }} Start Test verification
 on:
   pull_request:
-    types: [opened, reopened]
+    types: [opened, reopened, edited]
     branches:
       - 'develop'
 
