secrets.defaults.properties added to gitignore

--- a/secrets.defaults.properties
+++ b/secrets.defaults.properties
@@ -1,4 +1,4 @@
-KITSU_API_URL="https://example"
-ALIAS = aliasExample
-KEY_PASS = keypassExample
-KEY_ALIAS = keyaliasExample
+KITSU_API_URL="https://kitsu.io/api/edge/"
+ALIAS = AnimeAlias23
+KEY_PASS = @nimeMania2023
+KEY_ALIAS = @nimeMania2023
