--- a/.github/workflows/deliver_beta.yml
+++ b/.github/workflows/deliver_beta.yml
@@ -16,19 +16,13 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'    
-      - uses: christian-draeger/write-properties@1.1.0
-        with:
-          path: '${{github.workspace}}secrets.defaults.properties'
-          property: |
-            'KITSU_API_URL'
-            'ALIAS'
-            'KEY_PASS'
-            'KEY_ALIAS'
-          value: |
-            "${{secrets.KITSU_API_URL}}"
-            ${{secrets.ALIAS}}
-            ${{secrets.KEY_PASS}}
-            ${{secrets.KEY_ALIAS}}
+      - run: |
+          # Create a properties file using echo command
+          echo "KITSU_API_URL=${{secrets.KITSU_API_URL}}" > ${{github.workspace}}secrets.defaults.properties
+          echo "ALIAS=${{secrets.ALIAS}}" >> ${{github.workspace}}secrets.defaults.properties
+          echo "KEY_PASS=${{secrets.KEY_PASS}}" >> ${{github.workspace}}secrets.defaults.properties
+          echo "KEY_ALIAS=${{secrets.KEY_ALIAS}}" >> ${{github.workspace}}secrets.defaults.properties
+      - run: cat ${{github.workspace}}secrets.defaults.properties    
       - uses: christian-draeger/write-properties@1.1.0 
         with:
           name: "pc-api-5201818442615982167-352-90e18ec40c6a.json"
