--- a/.github/workflows/deliver_beta.yml
+++ b/.github/workflows/deliver_beta.yml
@@ -26,14 +26,9 @@ jobs:
       - run: |
           mkdir ${{github.workspace}}/fastlane/secrets 
       - run: cat ${{github.workspace}}/secrets.defaults.properties    
-      - uses: jsdaniell/create-json@v1.2.2
-        with:
-          name: "pc-api-5201818442615982167-352-90e18ec40c6a.json"
-          json: ${{secrets.PLAYSTORE_CREDENTIALS}}
-          dir: '${{github.workspace}}/fastlane/secrets/'
       - run: |
           # Create JSON data using secrets and save to a file
-          echo ${{ secrets.SECRET1 }} > ${{github.workspace}}/fastlane/secrets/pc-api-5201818442615982167-352-90e18ec40c6a.json
+          echo ${{ secrets.PLAYSTORE_CREDENTIALS }} > ${{github.workspace}}/fastlane/secrets/pc-api-5201818442615982167-352-90e18ec40c6a.json
       - run: cat ${{github.workspace}}/fastlane/secrets/pc-api-5201818442615982167-352-90e18ec40c6a.json
       - uses: timheuer/base64-to-file@v1
         with:
