--- a/.github/workflows/deliver_beta.yml
+++ b/.github/workflows/deliver_beta.yml
@@ -28,6 +28,6 @@ jobs:
           encodedString: ${{ secrets.JSON_SECRET }}
       - run: |
           echo "${{secrets.JSON_SECRET}}" > ${{github.workspace}}/fastlane/secret_play_console.json.b64
-          base64 -d -i secret_play_console.json.b64 > secret_play_console.json
+          base64 -d -i ${{github.workspace}}/fastlane/secret_play_console.json.b64 > ${{github.workspace}}/fastlane/secret_play_console.json
       - run: fastlane deliver_abb version:"${{ env.RELEASE_VERSION }}" track:"beta"
         
