--- a/.github/workflows/deliver_beta.yml
+++ b/.github/workflows/deliver_beta.yml
@@ -2,9 +2,9 @@ name: Deliver to beta
 
 on:
   release:
-    types: created
+    types: [published]
     tags:
-      - 'v*.*.*-beta'
+      - 'v*.*.*-beta*'
 
 jobs:
   beta:
@@ -29,5 +29,10 @@ jobs:
       - run: |
           echo "${{secrets.JSON_SECRET}}" > ${{github.workspace}}/fastlane/secret_play_console.json.b64
           base64 -d -i ${{github.workspace}}/fastlane/secret_play_console.json.b64 > ${{github.workspace}}/fastlane/secret_play_console.json
+      - run: fastlane supply init
+      - run: mkdir -p ${{github.workspace}}/fastlane/metadata/android/en-US/changelogs
+      - run: |
+          # Create what's new section
+          echo "${{env.CHANGE_LOG}}" > ${{github.workspace}}/fastlane/metadata/android/en-US/changelogs/${{ env.RELEASE_VERSION }}.txt
       - run: fastlane deliver_abb version:"${{ env.RELEASE_VERSION }}" track:"beta"
         
