--- a/.github/workflows/deliver_beta.yml
+++ b/.github/workflows/deliver_beta.yml
@@ -29,8 +29,7 @@ jobs:
       - run: |
           echo "${{secrets.JSON_SECRET}}" > ${{github.workspace}}/fastlane/secret_play_console.json.b64
           base64 -d -i ${{github.workspace}}/fastlane/secret_play_console.json.b64 > ${{github.workspace}}/fastlane/secret_play_console.json
-      - run: fastlane supply init
-      - run: mkdir -p ${{github.workspace}}/fastlane/metadata/android/en-US/changelogs
+      - run: fastlane supply init --track beta
       - run: |
           # Create what's new section
           echo "${{env.CHANGE_LOG}}" > ${{github.workspace}}/fastlane/metadata/android/en-US/changelogs/${{ env.RELEASE_VERSION }}.txt
