--- a/.github/workflows/deliver_beta.yml
+++ b/.github/workflows/deliver_beta.yml
@@ -17,7 +17,7 @@ jobs:
           java-version: '17'    
       - run: |
           # Create a properties file using echo command
-          echo "KITSU_API_URL=${{secrets.KITSU_API_URL}}" > ${{github.workspace}}/secrets.defaults.properties
+          echo 'KITSU_API_URL="${{secrets.KITSU_API_URL}}"' > ${{github.workspace}}/secrets.defaults.properties
           echo "ALIAS=${{secrets.ALIAS}}" >> ${{github.workspace}}/secrets.defaults.properties
           echo "KEY_PASS=${{secrets.KEY_PASS}}" >> ${{github.workspace}}/secrets.defaults.properties
           echo "KEY_ALIAS=${{secrets.KEY_ALIAS}}" >> ${{github.workspace}}/secrets.defaults.properties
