--- a/.github/workflows/deliver_beta.yml
+++ b/.github/workflows/deliver_beta.yml
@@ -20,6 +20,8 @@ jobs:
           echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - run: |
           # Create a properties file using echo command
+          echo "${{secrets.KEYSTORE}}" > keystore.jks.b64
+          base64 -d -i keystore.jks.b64 > ${{github.workspace}}/app/keystore.jks
           echo 'KITSU_API_URL="${{secrets.KITSU_API_URL}}"' > ${{github.workspace}}/secrets.defaults.properties
           echo "ALIAS=${{secrets.ALIAS}}" >> ${{github.workspace}}/secrets.defaults.properties
           echo "KEY_PASS=${{secrets.KEY_PASS}}" >> ${{github.workspace}}/secrets.defaults.properties
@@ -30,6 +32,7 @@ jobs:
           base64 -d -i ${{github.workspace}}/fastlane/secret_play_console.json.b64 > ${{github.workspace}}/fastlane/secret_play_console.json
       - run: fastlane supply init --track beta
       - run: fastlane increment_app_version_code track:"beta"
+      - run: fastlane generate_abb
       - run: |
           # Create what's new section
           echo "${{env.CHANGE_LOG}}" > ${{github.workspace}}/fastlane/metadata/android/en-US/changelogs/${{ env.RELEASE_VERSION }}.txt
