--- a/.github/workflows/ktlint_format_verify.yml
+++ b/.github/workflows/ktlint_format_verify.yml
@@ -17,5 +17,11 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
+      - run: |
+          # Create a properties file using echo command
+          echo 'KITSU_API_URL="${{secrets.KITSU_API_URL}}"' > ${{github.workspace}}/secrets.defaults.properties
+          echo "ALIAS=${{secrets.ALIAS}}" >> ${{github.workspace}}/secrets.defaults.properties
+          echo "KEY_PASS=${{secrets.KEY_PASS}}" >> ${{github.workspace}}/secrets.defaults.properties
+          echo "KEY_ALIAS=${{secrets.KEY_ALIAS}}" >> ${{github.workspace}}/secrets.defaults.properties
       - run: fastlane lint_format
       - run: fastlane lint_verification
