Download files run commented

--- a/.github/workflows/deliver_beta.yml
+++ b/.github/workflows/deliver_beta.yml
@@ -30,7 +30,7 @@ jobs:
           # Decode base64 Json and create the file
           echo "${{secrets.JSON_SECRET}}" > ${{github.workspace}}/fastlane/secret_play_console.json.b64
           base64 -d -i ${{github.workspace}}/fastlane/secret_play_console.json.b64 > ${{github.workspace}}/fastlane/secret_play_console.json
-      - run: fastlane supply init --track beta
+      #- run: fastlane supply init --track beta
       - run: fastlane increment_app_version_code track:"beta"
       - run: fastlane set_version_name version:${{ env.RELEASE_VERSION }}
       - run: fastlane generate_aab
