--- a/.github/workflows/deliver_beta.yml
+++ b/.github/workflows/deliver_beta.yml
@@ -31,6 +31,7 @@ jobs:
           echo "${{secrets.JSON_SECRET}}" > ${{github.workspace}}/fastlane/secret_play_console.json.b64
           base64 -d -i ${{github.workspace}}/fastlane/secret_play_console.json.b64 > ${{github.workspace}}/fastlane/secret_play_console.json
       #- run: fastlane supply init --track beta
+      - run: mkdir -p ${{github.workspace}}/fastlane/metadata/android/en-US/changelogs/
       - run: |
           # Create what's new section
           echo "$CHANGE_LOG" > ${{github.workspace}}/fastlane/metadata/android/en-US/changelogs/default.txt
