--- a/.github/workflows/deliver_beta.yml
+++ b/.github/workflows/deliver_beta.yml
@@ -34,8 +34,7 @@ jobs:
       - run: mkdir -p ${{github.workspace}}/fastlane/metadata/android/en-US/changelogs/
       - run: |
           # Create what's new section
-          CHANGE_LOG_CONTENT=${{ env.CHANGE_LOG }}
-          echo "$CHANGE_LOG_CONTENT" > ${{github.workspace}}/fastlane/metadata/android/en-US/changelogs/default.txt
+          echo ${{ env.CHANGE_LOG }} > ${{github.workspace}}/fastlane/metadata/android/en-US/changelogs/default.txt
           cat ${{github.workspace}}/fastlane/metadata/android/en-US/changelogs/default.txt
       - run: fastlane increment_app_version_code track:"beta"
       - run: fastlane set_version_name version:${{ env.RELEASE_VERSION }}
