--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -1,5 +1,4 @@
-name: Test verification
-run-name: ${{ github.actor }} Start Test verification
+name: Develop Branch verification
 on:
   pull_request:
     types: [opened, reopened, edited]
@@ -7,7 +6,43 @@ on:
       - 'develop'
 
 jobs:
-  code_coverage:
+  run-linter-develop:
+    name: Runs linter
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - run: |
+          # Create a properties file using echo command
+          echo 'KITSU_API_URL="${{secrets.KITSU_API_URL}}"' > ${{github.workspace}}/secrets.defaults.properties
+          echo "ALIAS=${{secrets.ALIAS}}" >> ${{github.workspace}}/secrets.defaults.properties
+          echo "KEY_PASS=${{secrets.KEY_PASS}}" >> ${{github.workspace}}/secrets.defaults.properties
+          echo "KEY_ALIAS=${{secrets.KEY_ALIAS}}" >> ${{github.workspace}}/secrets.defaults.properties
+      - run: fastlane lint_verification
+
+  run-unit-test-develop:
+    needs: run-linter-develop
+    name: Runs unit test
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - run: |
+          # Create a properties file using echo command
+          echo 'KITSU_API_URL="${{secrets.KITSU_API_URL}}"' > ${{github.workspace}}/secrets.defaults.properties
+          echo "ALIAS=${{secrets.ALIAS}}" >> ${{github.workspace}}/secrets.defaults.properties
+          echo "KEY_PASS=${{secrets.KEY_PASS}}" >> ${{github.workspace}}/secrets.defaults.properties
+          echo "KEY_ALIAS=${{secrets.KEY_ALIAS}}" >> ${{github.workspace}}/secrets.defaults.properties
+      - run: fastlane unit_test_verification
+
+  code-coverage-develop:
+    needs: run-unit-test-develop
     name: Verify Code Coverage
     runs-on: macos-latest
     steps:
@@ -35,6 +70,6 @@ jobs:
             ${{github.workspace}}/feature/detail/build/reports/jacoco/jacocoMergedReport/jacocoMergedReport.xml
             ${{github.workspace}}/feature/home/build/reports/jacoco/jacocoMergedReport/jacocoMergedReport.xml
           token: ${{ secrets.GITHUB_TOKEN }}
-          min-coverage-overall: 50
+          min-coverage-overall: 60
           min-coverage-changed-files: 80
-          continue-on-error: false
+          continue-on-error: true
