--- a/.github/workflows/develop_pipeline.yml
+++ b/.github/workflows/develop_pipeline.yml
@@ -1,4 +1,4 @@
-name: Develop Branch verification
+name: Develop Pipeline
 on:
   pull_request:
     types: [opened, reopened, edited]
@@ -23,27 +23,8 @@ jobs:
           echo "KEY_ALIAS=${{secrets.KEY_ALIAS}}" >> ${{github.workspace}}/secrets.defaults.properties
       - run: fastlane lint_verification
 
-  run-unit-test-develop:
-    needs: run-linter-develop
-    name: Runs unit test
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - run: |
-          # Create a properties file using echo command
-          echo 'KITSU_API_URL="${{secrets.KITSU_API_URL}}"' > ${{github.workspace}}/secrets.defaults.properties
-          echo "ALIAS=${{secrets.ALIAS}}" >> ${{github.workspace}}/secrets.defaults.properties
-          echo "KEY_PASS=${{secrets.KEY_PASS}}" >> ${{github.workspace}}/secrets.defaults.properties
-          echo "KEY_ALIAS=${{secrets.KEY_ALIAS}}" >> ${{github.workspace}}/secrets.defaults.properties
-      - run: fastlane unit_test_verification
-
-  code-coverage-develop:
-    needs: run-unit-test-develop
-    name: Verify Code Coverage
+  test-code-coverage-develop:
+    name: Run test and Code Coverage
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
