--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -1,5 +1,4 @@
-name: Upload code coverage to Code Climate 🌡
-run-name: ${{ github.actor }} Generating and upload your coverage report 📊
+name: Master Pipeline
 on:
   pull_request:
     types: [ opened, reopened, edited ]
@@ -10,8 +9,26 @@ on:
       - 'master'
 
 jobs:
-  Coverage-report:
-    name: Code climate Coverage report 🌡📊
+  run-linter-master:
+    name: Runs linter
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - run: |
+          # Create a properties file using echo command
+          echo 'KITSU_API_URL="${{secrets.KITSU_API_URL}}"' > ${{github.workspace}}/secrets.defaults.properties
+          echo "ALIAS=${{secrets.ALIAS}}" >> ${{github.workspace}}/secrets.defaults.properties
+          echo "KEY_PASS=${{secrets.KEY_PASS}}" >> ${{github.workspace}}/secrets.defaults.properties
+          echo "KEY_ALIAS=${{secrets.KEY_ALIAS}}" >> ${{github.workspace}}/secrets.defaults.properties
+      - run: fastlane lint_verification
+
+  test-cc-code-climate-master:
+    needs: run-linter-master
+    name: Unite test and Code climate Coverage report 🌡📊
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
@@ -38,7 +55,6 @@ jobs:
             ${{github.workspace}}/feature/detail/src/main/java
             ${{github.workspace}}/feature/home/src/main/java
         with:
-        # The report file must be there, otherwise Code Climate won't find it
           coverageCommand: fastlane coverage_report
           coverageLocations: |
             ${{github.workspace}}/app/build/reports/jacoco/jacocoMergedReport/jacocoMergedReport.xml:jacoco
